Fixed all intellij warnings by updating some comments and enhancing some method signatures for better clarity and type safety